    0.2.29
        * INSTALL: Windows notice removed. Added less(1) as a weak dependency.
        * `make dist`: Include "testcfg" as it's needed by something in
            test.py.
        * anonymine_engine.py (hiscores (display)): Bugfix:
            UnicodeDecodeError on localized weekday abbreviations.
        * anonymine.py (highscores_display): Bugfix: Encode the text before
            sending to less(1).

2016-08-12      Oskar Skog      <oskar.skog.finland@gmail.com>
    0.2.28
        * anonymine_engine.py (hiscores (_load)): Bugfix:
            The IO error table didn't work as hiscores was None rather than []
        * (All python modules): Allow running as root on Haiku.
        *: New file INSTALL.Haiku.
        *: Moved Windows.txt to INSTALL.Windows to match the new pattern.

2016-08-11      Oskar Skog      <oskar.skog.finland@gmail.com>
    0.2.27
        * Makefile.static (print-destinations): Fixed syntax error.
        * Makefile.static (release): Added verbose messages, added new
            target "test" as a synonym for "check".
    0.2.26
        * anonymine.py (highscores_display):
            - Add -# 1 as options to less.
            - Allow subprocess to fail.
        * README: Added some notes about the tested platforms.
            Minix 3 and openindiana no longer work.
        * mkenginexfg:
            - seq(1) is apparently a GNU specific utility.
            - Added quotes around $nproc to let the Python script succeed
              even if no method of counting processors worked.

2016-08-10      Oskar Skog      <oskar.skog.finland@gmail.com>
    0.2.25
        * anonymine.py (highscores_display): Use less(1).
    0.2.24
        * anonymine_solver.py: Removed deprecated functions.
        * README: Dropped goal 0.5: statistics module. Rephrased 0.6(->0.5)
        * test.py: Removed functions that depend on the deprecated statistics
            functions.

2016-08-08      Oskar Skog      <oskar.skog.finland@gmail.com>
    0.2.23